# UrbanPulse

./: .env  .gitignore  PLAN.md  README.md  docker-compose.yml  roadmap.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  makefile  pyproject.toml  requirements.txt
backend/app/: .env  main.py  makefile
backend/app/anamoly/: anamoly.py  detect_anamoly.py
backend/app/features/: feature_extractor.py
backend/app/graph/: astar.py  graph_builder.py  graph_store.py  resource_engine.py  route_blocker.py  route_service.py  update_weights.py
backend/app/impact/: anamoly_service.py  dashboard_service.py  forecast_service.py  heat_map.py  hotspot_service.py  marker_service.py  prediction_service.py  trend_service.py
backend/app/live/: hotspot_engine.py
backend/app/resources/: police_stations.py  resource_optimizer.py
backend/app/routing/: anamoly_route.py  dashboard.py  forecast.py  hotspot.py  live_hotspot.py  live_insights.py  post_event.py  prediction.py  resource_optimizer.py  route.py  simulate.py  trend.py
backend/app/simulation/: cluster_assign.py  event_history.py  event_simulation.py  here_service.py  live_analytics.py  live_simulator.py  tomtom_event.py  tomtomservice.py
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/data/: cluster_centers.csv  data_cols.py  planned_events.csv  unplanned_event.csv
backend/models/: anomaly_model.pkl  encoders.pkl  forecast_model.pkl
backend/notebooks/: 1.py  DBSCAN.ipynb  cluster_centers.html  incident_heatmap.html  preprocess.ipynb  test.ipynb
(+94 files in other folders)
